Add binder link and repo link to slide header.

--- a/slides/_template/index.html.j2
+++ b/slides/_template/index.html.j2
@@ -106,6 +106,14 @@ a.anchor-link {
 <div class="reveal">
 <div class="footer" style="padding: 4px;">
     Introduction to Data Analysis Using Pandas &ndash; Stefanie Molin
+    <div style="float: right; margin-top: -18px;">
+        <a href="https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab" style="z-index: 1;" target="_blank" rel="noopener noreferrer">
+            <img alt="Binder" src="https://mybinder.org/badge_logo.svg" style="max-width: 100%;">
+        </a>
+        <a href="https://github.com/stefmolin/pandas-workshop" style="z-index: 1;" target="_blank" rel="noopener noreferrer">
+            <img alt="View repo on GitHub" src="https://img.shields.io/badge/view-repo-orange?logo=github" style="max-width: 100%;">
+        </a>
+    </div>
 </div>
 <div class="slides">
 {%- endblock body_header -%}
