Add comments to templates.

--- a/slides/templates/larger_font/index.html.j2
+++ b/slides/templates/larger_font/index.html.j2
@@ -73,7 +73,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 a.anchor-link {
    display: none;
 }
-.highlight  {
+.highlight { /* spacing between code block and the code inside it */
     margin: 0.4em 0.4em 0em !important;
 }
 .jp-Notebook {
@@ -145,6 +145,7 @@ a.anchor-link {
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 {% endif %}
 <div class="reveal">
+<!--
 <div class="footer" style="padding: 4px; font-size: 22px;">
     {{title}} &ndash; Stefanie Molin
     <div style="float: right; margin-top: -18px;">
@@ -156,6 +157,7 @@ a.anchor-link {
         </a>
     </div>
 </div>
+-->
 <div class="slides">
 {%- endblock body_header -%}
 
@@ -175,14 +177,13 @@ require(
     function(Reveal, RevealNotes){
         // Full list of configuration options available here: https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
-            controls: true,
+            controls: false, // don't show for larger versions to have more room
             progress: true,
             slideNumber: "c",
             pdfSeparateFragments: false,
             history: true,
             transition: "{{reveal_transition}}",
             plugins: [RevealNotes],
-            controls: false, // don't show for larger versions to have more room
             width: 1600,
             height: 900
         });
@@ -203,8 +204,7 @@ require(
                 return $(this).height() > h;
               })
               .css('height', 'calc(' + scale + 'vh)') // sets height to scale percent of the viewport height (vh)
-              .css('overflow', 'scroll')
-              .css('margin-top', '20px');
+              .css('overflow', 'scroll');
         }
 
         // check and set the scrolling slide every time the slide change
